add provision to store upgrade metrics