@@ -7,7 +7,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.jdbi.v3.core.Handle;
@@ -28,6 +27,8 @@ public class MigrationWorkflow {
   private final Jdbi jdbi;
 
   private final boolean forceMigrations;
+
+  private Optional<String> currentMaxMigrationVersion;
 
   public MigrationWorkflow(
       Jdbi jdbi,
@@ -86,26 +87,26 @@ public class MigrationWorkflow {
     return Stream.concat(
             availableOMNativeMigrations.stream(), availableExtensionMigrations.stream())
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public List<MigrationFile> getMigrationFilesFromPath(String path, ConnectionType connectionType) {
     return Arrays.stream(Objects.requireNonNull(new File(path).listFiles(File::isDirectory)))
         .map(dir -> new MigrationFile(dir, migrationDAO, connectionType))
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<MigrationProcess> filterAndGetMigrationsToRun(
       List<MigrationFile> availableMigrations) {
     LOG.debug("Filtering Server Migrations");
-    Optional<String> previousMaxMigration = migrationDAO.getMaxServerMigrationVersion();
+    currentMaxMigrationVersion = migrationDAO.getMaxServerMigrationVersion();
     List<MigrationFile> applyMigrations;
-    if (previousMaxMigration.isPresent() && !forceMigrations) {
+    if (currentMaxMigrationVersion.isPresent() && !forceMigrations) {
       applyMigrations =
           availableMigrations.stream()
-              .filter(migration -> migration.biggerThan(previousMaxMigration.get()))
-              .collect(Collectors.toList());
+              .filter(migration -> migration.biggerThan(currentMaxMigrationVersion.get()))
+              .toList();
     } else {
       applyMigrations = availableMigrations;
     }
@@ -125,14 +126,15 @@ public class MigrationWorkflow {
     return processes;
   }
 
-  @SuppressWarnings("unused")
-  private void initializeMigrationWorkflow() {}
-
   public void runMigrationWorkflows() {
     try (Handle transactionHandler = jdbi.open()) {
       LOG.info("[MigrationWorkflow] WorkFlow Started");
       MigrationWorkflowContext context = new MigrationWorkflowContext(transactionHandler);
-      context.computeInitialContext();
+      if (currentMaxMigrationVersion.isPresent()) {
+        context.computeInitialContext(currentMaxMigrationVersion.get());
+      } else {
+        context.computeInitialContext("1.1.0");
+      }
       try {
         for (MigrationProcess process : migrations) {
           // Initialise Migration Steps
@@ -190,17 +192,9 @@ public class MigrationWorkflow {
     LOG.info("[MigrationWorkflow] WorkFlow Completed");
   }
 
-  public void closeMigrationWorkflow() {
-    // 1. Write to DB table the version we upgraded to
-    // should be the current server version
-
-    // 2. Commit Transaction on completion
-  }
-
   public void updateMigrationStepInDB(MigrationProcess step) {
     migrationDAO.upsertServerMigration(
         step.getVersion(), step.getMigrationsPath(), UUID.randomUUID().toString());
   }
 
-  public void migrateSearchIndexes() {}
 }
