@@ -2,7 +2,6 @@ package org.openmetadata.service.migration.context;
 
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
@@ -21,7 +20,7 @@ public class MigrationContext {
     this.version = version;
     this.migrationOps =
         Stream.concat(migrationOps.stream(), CommonMigrationOps.getCommonOps().stream())
-            .collect(Collectors.toList());
+            .toList();
     this.handle = handle;
   }
 
